--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
-    "next": "^1.2.3"
+    "next": "^1.2.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "scripts": {
-    "dev": "next"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   }
 }
